[FIX]utils: corregido el script de datos para asignar temporadas